--- a/index.html
+++ b/index.html
@@ -7,10 +7,6 @@
 
     <link rel="shortcut icon" href="icons/favicon.ico" type="image/x-icon">
 
-    <!-- Google Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;300;400&family=Tourney:ital,wght@0,100;0,900;1,100;1,200;1,300;1,900&display=swap" rel="stylesheet">
     <!-- BootStrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -44,20 +40,20 @@
                 </button>
 
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-                    <ul class="navbar-nav ms-auto">
-                        <li class="nav-item menulist">
+                    <ul class="navbar-nav ms-lg-auto">
+                        <li class="nav-item menulist ms-auto">
                             <a class="nav-link active" href="">Home</a>
                         </li>
 
-                        <li class="nav-item menulist">
+                        <li class="nav-item menulist ms-auto">
                             <a class="nav-link" href="">Work</a>
                         </li>
 
-                        <li class="nav-item menulist">
+                        <li class="nav-item menulist ms-auto">
                             <a class="nav-link" href="">About Me</a>
                         </li>
 
-                        <li class="nav-item menulist">
+                        <li class="nav-item menulist ms-auto">
                             <a class="nav-link" href="">Contact</a>
                         </li>
 
@@ -68,7 +64,7 @@
         </nav>
         <div class="container-fluid title row pt-lg-5 pt-md-5 pb-5 ps-lg-5 pe-lg-5">
 
-            <div class="left-title col-lg-6 col-md-6">
+            <div class="left-title col-lg-6 col-md-6 mt-auto mb-auto">
                 <h3>Name is</h3>
                 <h1>Darshan</h1>
                 <p>Wanna be a Web-Developer...</p>
