Added Language section
***Not Completed Yet***

--- a/index.html
+++ b/index.html
@@ -74,8 +74,32 @@
             </div>
         </div>
     </section>
-    <h1>Hey There</h1>
-    <h2>*More items Coming soon.*</h2>
+
+    <section class="langs">
+        <div class="langheader">
+            <h2>Laguages I Know...</h2>
+        </div>
+        <div class="langdex">
+            <div class="langcenter row">
+            <div class="langcard col-sm-6 col-md-3">
+                <i class="fab fa-html5"></i>
+                <h3>HTML</h3>
+            </div>
+            <div class="langcard col-sm-6 col-md-3">
+                <i class="fab fa-css3"></i>
+                <h3>CSS</h3>
+            </div>
+            <div class="langcard col-sm-6 col-md-3">
+                <i class="fab fa-js"></i>
+                <h3>Javascript</h3>
+            </div>
+            <div class="langcard col-sm-6 col-md-3">
+                <i class="fab fa-bootstrap"></i>
+                <h3>BootStrap</h3>
+            </div>
+        </div>
+        </div>
+    </section>
 
 
     <!-- BS Javascript -->
