--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="shortcut icon" href="icons/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="icons/favicon.ico" type="image/x-icon" />
 
     <!-- BootStrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
 
     <!-- Font Awesome -->
 
@@ -17,20 +17,15 @@
 
     <!-- CSS -->
 
-    <link rel="stylesheet" href="style.css">
-
+    <link rel="stylesheet" href="style.css" />
 
     <title>Darshan Nariya</title>
-
-
 </head>
 
-<body>
-    <section class="top">
-        <nav class="navbar navbar-light  navbar-expand-lg container-fluid">
-
+<body class="bodygrad">
+    <section class="top bggrad">
+        <nav class="navbar navbar-light navbar-expand-lg container-fluid">
             <div class="container-fluid navmenu ps-lg-5 pe-lg-5">
-
                 <a class="navbar-brand" href="">{DG}</a>
 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -56,14 +51,11 @@
                         <li class="nav-item menulist ms-auto">
                             <a class="nav-link" href="">Contact</a>
                         </li>
-
                     </ul>
                 </div>
-
             </div>
         </nav>
         <div class="container-fluid title row pt-lg-5 pt-md-5 pb-5 ps-lg-5 pe-lg-5">
-
             <div class="left-title col-lg-6 col-md-6 mt-auto mb-auto">
                 <h3>Name is</h3>
                 <h1>Darshan</h1>
@@ -81,26 +73,33 @@
         </div>
         <div class="langdex">
             <div class="langcenter row">
-            <div class="langcard col-sm-6 col-md-3">
-                <i class="fab fa-html5"></i>
-                <h3>HTML</h3>
+                <div class="col-sm-6 col-md-3">
+                    <div class="card langcard">
+                        <i class="fab fa-html5"></i>
+                        <h3>HTML</h3>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-3">
+                    <div class="card langcard">
+                        <i class="fab fa-css3"></i>
+                        <h3>CSS</h3>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-3">
+                    <div class="card langcard">
+                        <i class="fab fa-js"></i>
+                        <h3>Javascript</h3>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-3">
+                    <div class="card langcard">
+                        <i class="fab fa-bootstrap"></i>
+                        <h3>BootStrap</h3>
+                    </div>
+                </div>
             </div>
-            <div class="langcard col-sm-6 col-md-3">
-                <i class="fab fa-css3"></i>
-                <h3>CSS</h3>
-            </div>
-            <div class="langcard col-sm-6 col-md-3">
-                <i class="fab fa-js"></i>
-                <h3>Javascript</h3>
-            </div>
-            <div class="langcard col-sm-6 col-md-3">
-                <i class="fab fa-bootstrap"></i>
-                <h3>BootStrap</h3>
-            </div>
-        </div>
         </div>
     </section>
-
 
     <!-- BS Javascript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
